* FEA#7959 Add surrender date to surrender wizard preview step

Version 1.14 - 2017-11-09
* FEA#6679 Module Creation