@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data>
+        <record model="ir.model.button-res.group" id="validate_surrender_button_contract_super_group">
+            <field name="button" ref="button_cancel_surrender"/>
+            <field name="group" ref="contract.group_contract_super_group"/>
+        </record>
+        <record model="ir.model.button-res.group" id="surrender_button_group_contract_manage">
+            <field name="button" ref="button_surrender"/>
+            <field name="group" ref="contract.group_contract_manage"/>
+        </record>
+    </data>
+</tryton>
