@@ -14,3 +14,4 @@ xml:
     sub_status.xml
     contract.xml
     wizard.xml
+    authorizations.xml
