@@ -4,6 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/group[@id='button_change_start_date']" position="inside">
         <field name="can_surrender" invisible="1"/>
+        <field name="surrender_invoice" invisible="1"/>
         <button string="Surrender" name="button_surrender"/>
+        <button string="Cancel Surrender" name="button_cancel_surrender"/>
     </xpath>
 </data>
