@@ -1,3 +1,4 @@
+* FEA#7994 Ajout d'un assitant permettant d'annuler le rachat d'un contrat
 * FEA#7959 Ajout de la date de rachat dans l'étape de prévisualisation de l'assitant de rachat
 
 Version 1.14 - 2017-11-09
