@@ -1,3 +1,4 @@
+* FEA#7994  Add a wizard which allows cancelling a contract's surrender
 * FEA#7959 Add surrender date to surrender wizard preview step
 
 Version 1.14 - 2017-11-09
